--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -1,12 +1,18 @@
 * {
   color: red;
   margin: 0;
+  box-sizing: border-box;
 }
 
 .thumbnail {
-  max-width: 300px;
+  max-width: 400px;
 }
 
 .card-style {
   box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.308);
+  transition: transform .2s;
+}
+
+.card-style:hover {
+  transform: scale(1.3)
 }
